<resources>
    <string name="app_name">AndreaCarballidoP3PMDM</string>
    <string name="Horas">Horas</string>
    <string name="Fecha">Fecha</string>
    <string name="Metros">Metros</string>
    <string name="Minutos">Minutos</string>
    <string name="Segundos">Segundos</string>
    <string name="Tiempo">Tiempo</string>
    <string name="añadir_entreno">Nuevo Entrenamiento</string>
    <string name="titulo">Entrenamiento</string>
    <string name="fecha_entrenamiento">Fecha</string>
    <string name="tiempo">Tiempo</string>
    <string name="distancia">Distancia</string>
    <string name="Peso">Peso</string>
    <string name="Nombre">Nombre</string>
    <string name="Edad">Edad</string>
    <string name="Altura">Altura</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="años">años</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">borrar</string>
    <string name="entrenamiento_creado">Entrenamiento creado</string>
    <string name="crear_entrenamiento_primero">Primero debes crear el entrenamiento</string>
    <string name="entrenamiento_actualizado">Entrenamiento actualizado</string>
    <string name="entrenamiento_borrado">Entrenamiento borrado</string>
    <string name="entrenamiento_no_existe">El entrenamiento no existe</string>
    <string name="tituloestadisticas">Estadísticas generales</string>
    <string name="kmNadados">Distancia total</string>
    <string name="mediaMinKm">Media de minutos por kilómetro</string>
    <string name="MinutosporKm">Minutos y segundos por km</string>
    <string name="velocidadMedia">Velocidad media (kms/h)</string>
    <string name="nadador">nadador</string>
    <string name="nombreUsuario">Nombre:</string>
    <string name="EdadUsuario">Edad:</string>
    <string name="tvEdad">años</string>
    <string name="tvAlturaUsuario">Altura:</string>
    <string name="tvMetrosUsuario">m</string>
    <string name="tvKgUsuario">kg</string>
    <string name="edPeso">Peso:</string>
    <string name="TiempoTotal">Tiempo total</string>
    <string name="velocidadM">Velocidad media general </string>
</resources>