<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andreacarballidop3pmdm.UI.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:padding="8dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="0dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="95dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/l2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.026"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.88"
                    app:srcCompat="@drawable/icono_nadador" />

                <TextView
                    android:id="@+id/tvNombreUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="44dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/nombreUsuario"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/l2"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

                <EditText
                    android:id="@+id/edNombreUsuario"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:inputType="textPersonName"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvNombreUsuario"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="LabelFor" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/l2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tvEdadUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/EdadUsuario"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/edEdadUsuario"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edEdadUsuario"
                        android:layout_width="35dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="2dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:inputType="number"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvAnhosUsuario"
                        app:layout_constraintStart_toEndOf="@+id/tvEdadUsuario"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="LabelFor,UnknownId" />

                    <TextView
                        android:id="@+id/tvAnhosUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/tvEdad"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvAlturaUsuario"
                        app:layout_constraintStart_toEndOf="@+id/edEdadUsuario"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvAlturaUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/tvAlturaUsuario"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/edAlturaUsuario"
                        app:layout_constraintStart_toEndOf="@+id/tvAnhosUsuario"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.478" />

                    <TextView
                        android:id="@+id/tvMetrosUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/tvMetrosUsuario"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvPesoUsuario"
                        app:layout_constraintStart_toEndOf="@+id/edAlturaUsuario"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPesoUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/edPeso"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/edPesoUsuario"
                        app:layout_constraintStart_toEndOf="@+id/tvMetrosUsuario"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.521" />

                    <EditText
                        android:id="@+id/edAlturaUsuario"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="2dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:inputType="numberDecimal"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvMetrosUsuario"
                        app:layout_constraintStart_toEndOf="@+id/tvAlturaUsuario"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/edPesoUsuario"
                        android:layout_width="35dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:inputType="numberDecimal"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvKgUsuario"
                        app:layout_constraintStart_toEndOf="@+id/tvPesoUsuario"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/tvKgUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/tvKgUsuario"
                        android:textColor="#020202"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/edPesoUsuario"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.521" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEntrenamientos"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="true"
        android:tint="#FFFFFF"
        app:backgroundTint="#000063"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/ic_baseline_add_24" />
</androidx.constraintlayout.widget.ConstraintLayout>